[package]
name = "timezone_converter"
version = "0.1.0"
authors = ["barleytea <barleytea362@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
structopt = "0.2"
chrono = "0.4.9"
chrono-tz = "0.5.1"
atty = "0.2.13"
